network/xray/httproute-public/httproute.template.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: 3xui-public
spec:
  hostnames:
  - prefix.suffix-automatic-replace
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateways
    name: main-public
    sectionName: https-main
  rules:

  # 3xui panel
  - matches:
    - path:
        type: PathPrefix
        value: /prefix1
    backendRefs:
    - group: ''
      kind: Service
      name: s3xui
      port: 2053
      weight: 1

  # subscription
  - matches:
    - path:
        type: PathPrefix
        value: /prefix2
    backendRefs:
    - group: ''
      kind: Service
      name: s3xui
      port: 2096
      weight: 1

  # subscription json
  - matches:
    - path:
        type: PathPrefix
        value: /prefix3
    backendRefs:
    - group: ''
      kind: Service
      name: s3xui
      port: 2096
      weight: 1

  # inbound 1
  - matches:
    - path:
        type: PathPrefix
        value: /prefix4
    backendRefs:
    - group: ''
      kind: Service
      name: s3xui
      port: 2054
      weight: 1
